[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Slack bot for handling messages"
authors = ["Brian CG <briancg.lab@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
flask = "^2.2.2"
requests = "^2.32.3"
slack-sdk = "^3.27.2"
slack-bolt = "^1.18.1"
waitress = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"